--- a/style3.css
+++ b/style3.css
@@ -5,19 +5,20 @@
 	padding: 0;
 }
 
-.image-area
+.container
 {
-	top: 50%;
+	top:50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	position: absolute;
 	display:flex;
+	
 }
 
 .img-wrapper
 {
-	width: 400px;
-	height: 500px;
+	width: 300px;
+	height: 400px;
 	position: relative;
 	overflow: hidden;
 	margin-right:30px;
@@ -53,15 +54,6 @@
 {
 	filter: grayscale(0%);
 	transform: scale(1.1);
-}
-h1{
-	background-color:orange;
-	color:black;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:50px;
-	width:400px;
-	margin-right:30px;
-	
 }
 .img-wrapper h2
 {
