--- a/style3.1.css
+++ b/style3.1.css
@@ -27,13 +27,10 @@
 	content: '';
 	position: absolute;
 	top: 0;
-	left: 180%;
+	/*left: 180%;*/
 	height: 100%;
 	width: 100%;
 	background: rgba(255,255,255,.3);
-	z-index: 1;
-	transform: skew(45deg);
-	transition: .5s;
 }
 .img-wrapper:hover:before
 {
@@ -42,34 +39,35 @@
 
 .img-wrapper img
 {
-	height: 100%;
+	height: 90%;
 	width: 100%;
-	filter: grayscale(75%);
+	filter: grayscale(50%);
 	transition: 2s;
 }
 .img-wrapper:hover img
 {
 	filter: grayscale(0%);
-	transform: scale(1.1);
+	transform: scale(1.5);
 }
-.img-wrapper h2
+.img-wrapper h3
 {
-	background: tomato;
+	background:#333333;
 	font-family: Poppins;
-	color: #fff;
+	color:tomato;
 	text-align: center;
 	text-transform: uppercase;
-	padding: 10px 0;
+	padding: 10px 0px;
 	position: absolute;
 	bottom: 0;
 	margin:0;
 	width: 100%;
-	transform: perspective(400px) rotateY(90deg);
+	transform: perspective(400px) rotateY(0deg);
 	transform-origin: right;
 	transition: 1s;
+	mar
 }
 
-.img-wrapper:hover h2
+.img-wrapper:hover h3
 {
 	transform: perspective(400px) rotateY(0deg);
 }
@@ -109,7 +107,7 @@
 
 .img-wrapper:hover ul li:nth-child(2)
 {
-	transition-delay: .6s;
+	transition-delay: .5s;
 }
 
 .img-wrapper:hover ul li:nth-child(3)
@@ -119,11 +117,11 @@
 
 .img-wrapper:hover ul li:nth-child(4)
 {
-	transition-delay: 1s;
+	transition-delay: 1.1s;
 }
 .img-wrapper:hover ul li:nth-child(5)
 {
-	transition-delay: 1.2s;
+	transition-delay: 1.4s;
 }
 
 
