--- a/style3.css
+++ b/style3.css
@@ -1,43 +1,25 @@
-﻿*
+﻿.img-wrapper
 {
-	background: #f1f2f6;
-	margin: 0;
-	padding: 0;
-}
-
-.container
-{
-	top:50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	position: absolute;
-	display:flex;
-	
-}
-
-.img-wrapper
-{
-	width: 300px;
-	height: 400px;
+	width: 100%;
+	height: 100%;
 	position: relative;
 	overflow: hidden;
-	margin-right:30px;
 }
-
+.container{
+	display: flex;
+    justify-content: center;
+	flex-wrap:wrap;
+}
 .img-wrapper:before
 {
 	content: '';
 	position: absolute;
 	top: 0;
-	left: 180%;
+	/*left: 180%;*/
 	height: 100%;
 	width: 100%;
 	background: rgba(255,255,255,.3);
-	z-index: 1;
-	transform: skew(45deg);
-	transition: .5s;
 }
-
 .img-wrapper:hover:before
 {
 	left: -180%;
@@ -45,34 +27,35 @@
 
 .img-wrapper img
 {
-	height: 500px;
-	width: 400px;
-	filter: grayscale(100%);
+	height: 90%;
+	width: 100%;
+	filter: grayscale(50%);
 	transition: 2s;
 }
 .img-wrapper:hover img
 {
 	filter: grayscale(0%);
-	transform: scale(1.1);
+	transform: scale(1.5);
 }
-.img-wrapper h2
+.img-wrapper h3
 {
-	background: tomato;
+	background:#333333;
 	font-family: Poppins;
-	color: #fff;
+	color:tomato;
 	text-align: center;
 	text-transform: uppercase;
-	padding: 10px 0;
+	padding: 10px 0px;
 	position: absolute;
 	bottom: 0;
 	margin:0;
 	width: 100%;
-	transform: perspective(400px) rotateY(90deg);
+	transform: perspective(400px) rotateY(0deg);
 	transform-origin: right;
 	transition: 1s;
+	mar
 }
 
-.img-wrapper:hover h2
+.img-wrapper:hover h3
 {
 	transform: perspective(400px) rotateY(0deg);
 }
@@ -112,7 +95,7 @@
 
 .img-wrapper:hover ul li:nth-child(2)
 {
-	transition-delay: .6s;
+	transition-delay: .5s;
 }
 
 .img-wrapper:hover ul li:nth-child(3)
@@ -122,11 +105,11 @@
 
 .img-wrapper:hover ul li:nth-child(4)
 {
-	transition-delay: 1s;
+	transition-delay: 1.1s;
 }
 .img-wrapper:hover ul li:nth-child(5)
 {
-	transition-delay: 1.2s;
+	transition-delay: 1.4s;
 }
 
 
@@ -146,4 +129,10 @@
 {
 	color: #fff;
 	background: rgba(255,255,255,0);
+}
+.name{
+
+	text-align: center;
+	font-size:30px;
+	font-weight: bold;
 }
